[gd_scene load_steps=7 format=3 uid="uid://b02a3f4oxq14i"]

[ext_resource type="Script" path="res://scenes/world_builder/world_builder.gd" id="1_4l545"]
[ext_resource type="PackedScene" uid="uid://xqonh80jxl4i" path="res://scenes/camera/camera.tscn" id="2_jic8v"]
[ext_resource type="PackedScene" uid="uid://efb3nrmeanbb" path="res://scenes/cell_manager/cell_manager.tscn" id="3_bd45h"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_s4a3r"]

[sub_resource type="Sky" id="Sky_4iukk"]
sky_material = SubResource("ProceduralSkyMaterial_s4a3r")

[sub_resource type="Environment" id="Environment_c1k0s"]
background_mode = 2
background_color = Color(0.758192, 0.758192, 0.758192, 1)
sky = SubResource("Sky_4iukk")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)

[node name="WorldBuilder" type="Node3D"]
script = ExtResource("1_4l545")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c1k0s")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.998268, 0.058836, 0, -0.058836, 0.998268, 0, 2.21143, 0)

[node name="Camera" parent="." instance=ExtResource("2_jic8v")]

[node name="CellManager" parent="." instance=ExtResource("3_bd45h")]

[connection signal="change_brush_radius" from="Camera" to="." method="_on_camera_change_brush_radius"]
[connection signal="change_height" from="Camera" to="." method="_on_camera_change_height"]
[connection signal="move_brush_cursor" from="Camera" to="." method="_on_camera_move_brush_cursor"]
